--- a/site/layouts/partials/blog.html
+++ b/site/layouts/partials/blog.html
@@ -4,16 +4,11 @@
 		<h2 class="f2 b lh-title mb3">Latest stories</h2>
 
 		<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
-			{{ range first 4 (where .Data.Pages "Type" "post") }}
+			{{ range (where .Pages "Type" "post") }}
 				<div class="ph1-ns w-50-ns flex">
 					{{ .Render "li" }}
 				</div>
 			{{ end }}
 		</div>
-
-		<div class="tc">
-			<a href="/post" class="btn raise">Read more</a>
-		</div>
-
 	</div>
 </div>
